change mzTabID to use the file name